--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -6,24 +6,34 @@
 	<display-name>projectPilttipassi</display-name>
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
-		<welcome-file>index.htm</welcome-file>
-		<welcome-file>index.jsp</welcome-file>
-		<welcome-file>default.html</welcome-file>
-		<welcome-file>default.htm</welcome-file>
-		<welcome-file>default.jsp</welcome-file>
 	</welcome-file-list>
 
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>/src/main/resources/config/beanLocations.xml</param-value>
+		<param-value>WEB-INF/spring/beanLocation.xml</param-value>
 	</context-param>
 
 	<!-- Creates the Spring Container shared by all Servlets and Filters -->
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
+	
+		<servlet>
+		<servlet-name>appServlet</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>/WEB-INF/spring/appServlet/servlet-context.xml</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
 
-	<servlet>
+	<servlet-mapping>
+		<servlet-name>appServlet</servlet-name>
+		<url-pattern>/</url-pattern>
+	</servlet-mapping>
+
+	<!-- <servlet>
 		<description></description>
 		<display-name>FirstServlet</display-name>
 		<servlet-name>FirstServlet</servlet-name>
@@ -32,5 +42,5 @@
 	<servlet-mapping>
 		<servlet-name>FirstServlet</servlet-name>
 		<url-pattern>/firstServlet</url-pattern>
-	</servlet-mapping>
+	</servlet-mapping> -->
 </web-app>
